Updated to ignore IntelliJ

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 
 Monday7th_discussion
+
+.idea/.name
+
+.idea/compiler.xml
+
+.idea/workspace.xml
+
+*.xml
+
+.idea/modules.xml
+
+.idea/vcs.xml
+
+cw-ds.iml
